--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tekki Mariani</title>
+    <title>Über mich - Tekki Mariani</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h1>Willkommen auf meiner Seite!</h1></header>
+    <header><h1>Über mich</h1></header>
     <main>
         <article id="content">
-            <p>Ich bin Tekki Mariani und erschaffe interaktive Kunstwerke mit Code.</p>
+            <p>Ich programmiere kreative, interaktive Erlebnisse mit Java und Webtechnologien.</p>
         </article>
     </main>
     <script src="script.js"></script>
